# dos_re

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  MIGRATION.md  README.md  START_HERE.md  pyproject.toml
docs/: README.md  abi_end_state.md  agent_toolbox.md  ai_porting_charter.md  architecture.md  cookbook.md  dead_code_analysis.md  demos_and_snapshots.md  desmc.md  dos_re_2.0.md  enhancements.md  execution_atlas.md  execution_planner.md  execution_regions.md  future_work.md  getting_started.md  glossary.md  hardware_support.md  hooks_and_verification.md  lifecycle.md  lifting_design.md  memory_schema.md  migration_1.0_to_2.0.md  override_architecture.md  performance.md  pitfalls.md  porting_new_game.md  post_endgame.md  progressive_replacement.md  raster_effects.md  recovery_ir.md  replay_architecture.md  roadmap.md  state_mirrors.md  verification_contracts.md
dos_re/: asm.py  atlas.py  audio_sink.py  bootimage.py  bootstrap_runtime.py  boundary_clock.py  checkpoints.py  coverage.py  cpu.py  cpu386.py  crash.py  demo_replay.py  detachment_guard.py  display.py  display_platform.py  dos.py  dos4gw.py  execution.py  export.py  features.py  frame_verify.py  framebuffer.py  frontend_timeline.py  frontier.py  gaps.py  hook_taxonomy.py  hooks.py  identity.py  independence.py  input_demo.py  interrupts.py  islands.py  keyboard.py  le.py  materialized_plan.py  memory.py  observable.py  opl3.py  opl3_fast.py  overlay_menu.py  (+29 more)
examples/: README.md
graveyard/: README.md  opl3_exact.py
prompts/: README.md  audit_no_silent_fallbacks.md  write_recovery_status.md
(+229 files in other folders)
